<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/IntervalNameEdit"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/interval_name_label"
        android:layout_toStartOf="@+id/IntervalPropertyEditControls"
        />

    <LinearLayout
        android:id="@+id/IntervalPropertyEditControls"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/IntervalLengthEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/interval_length_label"/>

        <ImageButton
            android:id="@+id/UpIntervalButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@android:drawable/arrow_up_float"
            android:contentDescription="@string/move_up_content_description" />

        <ImageButton
            android:id="@+id/DownIntervalButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@android:drawable/arrow_down_float"
            android:contentDescription="@string/move_down_content_description" />

        <ImageButton
            android:id="@+id/DeleteIntervalButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/delete_file_content_description" />

    </LinearLayout>

</RelativeLayout>