<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.budgebars.rotelle.gui.ExerciseActivity">

    <ListView
        android:id="@+id/ExerciseDisplayView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/EditExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_exercise_label"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/StartExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/start_exercise_label"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/EmailExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/email_label"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>
